<?xml version="1.0"?>
<package format="2">
  <name>ros_testpkg</name>
  <version>0.0.0</version>
  <description>The ros_testpkg package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="cona@todo.todo">cona</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geomatry_msgs</depend>
  <depend>turtlesim</depend>
  <buildtool_depend>catkin</buildtool_depend>
   
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
